src/test/ui/rfcs/rfc-2528-type-changing-struct-update/type-generic-update.stderr
error[E0308]: mismatched types
  --> $DIR/type-generic-update.rs:46:11
   |
LL |         ..m1
   |           ^^ field type mismatch: Machine.state
   |
   = note: expected type `i32`
              found type `f64`

error[E0308]: mismatched types
  --> $DIR/type-generic-update.rs:51:11
   |
LL |         ..m1
   |           ^^ field type mismatch: Machine.state
   |
   = note: expected type `i32`
              found type `f64`

error[E0308]: mismatched types
  --> $DIR/type-generic-update.rs:51:11
   |
LL |         ..m1
   |           ^^ field type mismatch: Machine.message
   |
   = note: expected type `i32`
              found type `f64`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
